--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,13 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "giggsey/locale": "^1.7|^2.0",
+        "php": ">=7.4.2",
+        "symfony/polyfill-mbstring": "^1.17",
+        "giggsey/libphonenumber-for-php": "^8.13"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.0"
+    }
 }
